# tlm

./: .gitignore  README.md  generate.py  pyproject.toml  requirements.txt  train.py
src/model/: __init__.py  bitlinear.py  config.py  transformer.py
src/training/: trainer.py
