[project]
name = "tlm"
version = "0.1.0"
description = "Ternary transformer language model experiments"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "transformers>=4.40",
    "datasets>=2.19",
    "numpy>=1.26",
    "tqdm>=4.66",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[tool.ruff]
line-length = 100
